--- a/smol_business.html
+++ b/smol_business.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Smol Business</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA4PB8hE8pKj5T9P0pLtrHgI5xNJYz8cCf5F5R8uF3wG5AKF2w6kVmgE7OgQ96" crossorigin="anonymous">
-    <title>Smol Business</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
 </head>
 <body>
-    <div class="container bg-danger">
-        <div class="col-12 col-lg-5 bg-danger">
-            <h1>hello</h1>
-        </div>
-    </div>
+    
 </body>
 </html>
