--- a/smol_business.html
+++ b/smol_business.html
@@ -6,7 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
 </head>
-<body>
-    
+<body class="bg-info">
+    <nav class="navbar bg-primary">
+        <div class="container-fluid">
+
+            <img class="navbar-brand" src="logo.png" width="40" height="50">
+        </div>
+    </nav>
 </body>
 </html>
