added header and patched some problems with the content cards and the header

--- a/smol_business.html
+++ b/smol_business.html
@@ -20,73 +20,95 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Home</a>
+                <a class="nav-link" aria-current="page" href="#"><strong>Home</strong></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
+                <a class="nav-link" href="#"><strong>Features</strong></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
+                <a class="nav-link" href="#"><strong>Pricing</strong></a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
       
+      <!-- header -->
+       <header class="container mt-2">
+            <div class="row">
+                <div class="col border-3 border-primary">
+                    <h2 class="text-primary-emphasis mt-3">The store where everything is Smol</h2>
+                </div>
+                <div class="col border-3 border-primary text-end">
+                    <ul class="list-unstyled">
+                        <li>
+                            <span class="text-primary-emphasis"><strong>lorem ipsum</strong></span>
+                        </li>
+                        <li>
+                            <span class="text-primary-emphasis"><strong>lorem ipsum</strong></span>
+                        </li>
+                        <li>
+                            <span class="text-primary-emphasis"><strong>lorem ipsum</strong></span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+       </header>
+
       <!-- The 3 cards holding our smol "products" -->
-      <div class="container text-center m-3 p-0">
+      <div class="container text-center m-auto p-2">
         <div class="row">
-            <div class="col-12 col-md-4">
+            <div class="col-12 col-md-4 d-flex align-items-stretch">
                 <div class="card" id="card1">
-                    <h5 class="card-header p-auto">The Smolest&trade; things you can find</h5>
-                    <img class="card-img rounded-0" src="atom-6480540_1280.jpg">
+                    <h5 class="card-header p-auto">The Smolest things you can find</h5>
+                    <img class="card-img rounded-0" alt="Atom picture" src="atom-6480540_1280.jpg">
                     <div class="row text-center">
-                        <div class="col m-2 text-center text-md-start">
-                            <p>
-                                Describtion
-                                blah blah blah
+                        <div class="col m-2 text-md-start">
+                            <p class="card-text">
+                                We sell atoms!<br>
+                                You can be a proud owner of a Uranium atom.
                             </p>
                         </div>
                         <div class="col m-auto">
-                            <button class="bg-primary text-center rounded-2">
+                            <button class="bg-primary text-center rounded-2 text-light border-info">
                                 Order Now
                             </button>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-4">
+            <div class="col-12 col-md-4 d-flex align-items-stretch">
                 <div class="card" id="card2">
                     <h5 class="card-header">The teeny tinest</h5>
                     <img class="card-img rounded-0" src="dna-163466_1280.jpg">
                     <div class="row text-center">
-                        <div class="col m-2 text-center text-md-start">
-                            <p>
-                                Describtion2
-                                blah blah blah
+                        <div class="col m-2 text-md-start">
+                            <p class="card-text">
+                                We also sell actual DNA!
+                                50% off on the first purchase.
                             </p>
                         </div>
-                        <div class="col m-auto">
-                            <button class="bg-primary text-center rounded-2">
+                        <div class="col m-auto p-auto">
+                            <button class="bg-primary text-center rounded-2 text-light border-info">
                                 Order Now
                             </button>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-4">
+            <div class="col-12 col-md-4 d-flex align-items-stretch">
                 <div class="card" id="card3">
                     <h5 class="card-header">All in Smol sizes</h5>
                     <img class="card-img rounded-0" src="atom-6480540_1280.jpg">
-                    <div class="row text-center">
-                        <div class="col m-2 text-center text-md-start">
-                            <p>
-                                Describtion3
-                                blah blah blah
+                    <div class="row text-center my-4">
+                        <div class="col m-2 text-md-start">
+                            <p class="card-text">
+                                Microscopic items!
+                                Only at Smol.
                             </p>
                         </div>
                         <div class="col m-auto">
-                            <button class="bg-primary text-center rounded-2">
+                            <button class="bg-primary text-center rounded-2 text-light border-info">
                                 Order Now
                             </button>
                         </div>
