--- a/smol_business.html
+++ b/smol_business.html
@@ -8,17 +8,16 @@
 </head>
 <body class="bg-info">
     <!-- The navigation bar -->
-    <nav class="container-fluid navbar navbar-expand-md bg-primary">
-        <div class="navbar ">
-            <a  class="navbar-brand mx-2" href="#">
-                
-                <img src="logo.png" width="50" height="50">
-            </a>
-            <button class="navbar-toggler mx-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+    <nav class="navbar navbar-expand-lg bg-primary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img src="logo.png" width="50" height="50">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-primary-emphasis">
               <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="#"><strong>Home</strong></a>
               </li>
@@ -26,9 +25,13 @@
                 <a class="nav-link" href="#"><strong>Features</strong></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"><strong>Pricing</strong></a>
+                <a class="nav-link" aria-disabled="true"><strong>Prices</strong></a>
               </li>
             </ul>
+            <form class="d-flex" role="search">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
           </div>
         </div>
       </nav>
