added link to footer

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
         <div class="row">
             <div class="col-12 bg-primary text-white text-center pt-3">
-                <p>&copy; 2025 Smol - All Rights Reserved</p>
+                <p>&copy; 2025 Smol - All Rights Reserved <a class="text-light" href="#">Click here</a></p>
             </div>
         </div>
     </div>
