added alt text to images

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav class="navbar navbar-expand-lg bg-primary">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img src="logo.png" width="50" height="50">
+            <img alt="logo" src="logo.png" width="50" height="50">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -83,7 +83,7 @@
             <div class="col-12 col-md-4 d-flex align-items-stretch">
                 <div class="card" id="card2">
                     <h5 class="card-header">The teeny tinest</h5>
-                    <img class="card-img rounded-0" src="dna-163466_1280.jpg">
+                    <img alt="DNA picture" class="card-img rounded-0" src="dna-163466_1280.jpg">
                     <div class="row text-center">
                         <div class="col m-2 text-md-start">
                             <p class="card-text">
@@ -102,7 +102,7 @@
             <div class="col-12 col-md-4 d-flex align-items-stretch">
                 <div class="card" id="card3">
                     <h5 class="card-header">All in Smol sizes</h5>
-                    <img class="card-img rounded-0" src="atom-6480540_1280.jpg">
+                    <img alt="Atom picture" class="card-img rounded-0" src="atom-6480540_1280.jpg">
                     <div class="row text-center my-4">
                         <div class="col m-2 text-md-start">
                             <p class="card-text">
